# crewai_career_finder

./: README.md  pyproject-old.toml  pyproject.toml  report.md
src/crewai_career_finder/: crew.py  main.py
src/crewai_career_finder/config/: agents.yaml  tasks.yaml
