[project]
name = "crewai_career_finder"
version = "0.1.0"
description = "crewai_career_finder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
crewai_career_finder = "crewai_career_finder.main:run"
run_crew = "crewai_career_finder.main:run"
train = "crewai_career_finder.main:train"
replay = "crewai_career_finder.main:replay"
test = "crewai_career_finder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
